# LineSegmentsDetection

./: .gitmodules  README.md  run.sh
CannyLines/src/: CannyLine.cpp  MetaLine.cpp  MetaLine.h  QuickSort.h  buffer_2d.h
EDline-LBD/: EDLineDetector.cpp  LineDescriptor.cpp  PairwiseLineMatching.hh
LSD/: chairs.lsd.eps  chairs.lsd.txt
LSD-Ori/: Makefile  README.md  lsd.c  lsd.h  lsd_cmd.c
LSD-Ori/doc/: files.html  functions.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  lsd_8h-source.html  structcoorlist.html  structimage__char__s.html  structpoint.html  structrect.html
LSD/doc/: annotated.html  lsd_8c-source.html  lsd_8c.html  lsd_8h.html  structimage__int__s.html
LSWMS/: CMakeLists.txt  LSWMS.h  facade.avi  main.cpp
MCMLSD/MCMLSD/code/: computeKernel.m  determine_hough_lines_kernel_vote_remove.m  get_all_segments_assoc_edgeremoval.m  kernelInitialization.m  project_point_to_line_segment_vec.m  run_lineSegmentAlgorithm.m  trace_Back.m
MCMLSD/MCMLSD/code/mexfiles/: hmmParameters.m  hmmParameters.mexa64  mexRemoveVotes_v3_scale.c  mexRemoveVotes_v3_scale.mexmaci64  mexVoteEdges_v3_scale.c  mexVoteEdges_v3_scale.mexmaci64  returnLines.m  sampleLine.m  sampleLine.mexa64  sampleLine.mexmaci64
MCMLSD/MCMLSD/code/parameters/: likelihood_model.mat
MCMLSD/MCMLSD/code/utils/: getLegend.m  setImg.m
MCMLSD/__MACOSX/: ._MCMLSD
MCMLSD/__MACOSX/MCMLSD/: ._Imgs
MCMLSD/__MACOSX/MCMLSD/code/: ._ElderZuckerEdgeDetector  ._determine_hough_lines_kernel_vote_remove.m  ._get_all_segments_assoc_edgeremoval.m  (+9 more)
assets/: run.sh
(+42 files in other folders)
